2005-11-09  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (octave_int::operator char (void) const):
	New conversion op.

2005-11-01  John W. Eaton  <jwe@octave.org>

	* Makefile.in (distclean): Also remove oct-types.h.
	From Quentin Spencer <qspencer@ieee.org>.

2005-10-31  David Bateman  <dbateman@free.fr>

	* dSparse.cc, CSparse.cc: Use C++ true/false instead of
	preprocessor defined TRUE/FALSE.

2005-10-30  John W. Eaton  <jwe@octave.org>

	* mx-inlines.cc (MX_ND_REDUCTION): Iterate in direction of DIM.
	(MX_ND_CUMULATIVE_OP): Likewise.

2005-10-29  John W. Eaton  <jwe@octave.org>

	* mx-inlines.cc (MX_ND_REDUCTION): Avoid increment_index to speed
	things up.  Simplify.

	* Array.cc (Array<T>::indexN): Simplify.  Delete separate special
	case for "vector_equivalent".

	* Array-util.cc (vector_equivalent): Arg is now dim_vector.

2005-10-28  John W. Eaton  <jwe@octave.org>

	* oct-sparse.h: Fix typo in HAVE_UFSPARSE_UMFPACK_H.
	From Quentin Spencer <qspencer@ieee.org>.

	* sparse-base-chol.cc: Use C++ true/false instead of
	preprocessor defined TRUE/FALSE.  Use 0 instead of NULL.

2005-10-27  John W. Eaton  <jwe@octave.org>

	* Array.cc (assignN): Reshape to final size instead of resizing.

2005-10-26  John W. Eaton  <jwe@octave.org>

	* oct-sparse.h: New file.
	* oct-sparse.h.in: Delete.

2005-10-26  David Bateman  <dbateman@free.fr>

	* sparse-base-chol.h: Include cholmod specific code in HAVE_CHOLMOD
	* sparse-base-chol.cc: ditto.

2005-10-26  John W. Eaton  <jwe@octave.org>

	Changes for GCC 4.1, tip from Arno J. Klaassen
	<arno@heho.snv.jussieu.fr>:

	* dSparse.h (real (const SparseComplexMatrix&)): 
	Publish externally used friend function.
	(imag (const SparseComplexMatrix&)): Likewise.

	* dColVector.h (real (const ComplexColumnVector&)):
	Publish externally used friend function.
	(imag (const ComplexColumnVector&)): Likewise.

	* dNDArray.h (real (const ComplexNDArray&)):
	Publish externally used friend function.