@@ -1,3 +1,7 @@
+2005-11-11  John W. Eaton  <jwe@octave.org>
+
+	* Array.cc (Array<T>::indexN): Simplify.
+
 2005-11-09  John W. Eaton  <jwe@octave.org>
 
 	* oct-inttypes.h (octave_int::operator char (void) const):
